syntax = "proto3";
package product;

// Definition of the Product message
message Product {
  string id = 1;
  string name = 2;
  float price = 3;
  // Add additional data fields for the product if needed
}

// Definition of request and response messages for the methods
message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message SearchProductsRequest {
  string query = 1;
}

message SearchProductsResponse {
  repeated Product products = 1;
}

message CreateProductRequest {
  string name = 1;
  float price = 2;
  // Add additional data fields for creating a product if needed
}

message CreateProductResponse {
  Product product = 1;
}

// Definition of the product service
service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc SearchProducts(SearchProductsRequest) returns (SearchProductsResponse);
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
}
