syntax = "proto3";
package user;

// Definition of the User message
message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
  // Add additional data fields for the user if needed
}

// Definition of request and response messages for methods
message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message SearchUsersRequest {
  string query = 1;
}

message SearchUsersResponse {
  repeated User users = 1;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string role = 3;
  // Add additional data fields for creating a user if needed
}

message CreateUserResponse {
  User user = 1;
}

// Definition of the user service
service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  // Add other methods as needed
}
